--- a/pom.xml
+++ b/pom.xml
@@ -212,20 +212,26 @@
 		</dependency>
 
 		<!-- jetty jetty的作用就如同tomcat，如果没有，jsp中的tag都会报错 -->
-		<dependency>
+		<!--
+			<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-webapp</artifactId>
 			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
+			</dependency>
+			<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-jsp</artifactId>
 			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
+			</dependency>
+		-->
 		<!-- jetty end -->
-
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- JSON begin -->
 		<dependency>
@@ -322,8 +328,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- LOGGING end -->
-		
-		
+
+
 		<!-- selenium 2.0 -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -353,7 +359,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
@@ -489,8 +495,28 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<port>9090</port>
+					<path>/</path>
+					<systemProperties>
+						<systemProperty>
+							<name>spring.profiles.active</name>
+							<value>development</value>
+						</systemProperty>
+					</systemProperties>
+					<useTestClasspath>true</useTestClasspath>
+					<webAppConfig>
+						<contextPath>/${project.artifactId}</contextPath>
+					</webAppConfig>
+				</configuration>
+			</plugin>
 			<!-- jetty插件, 设定context path与spring profile -->
+			<!-- 由于使用了tomcat maven plugin，这里就不需要jetty plugin 了 -->
+			<!-- 
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -514,7 +540,8 @@
 					</webAppConfig>
 				</configuration>
 			</plugin>
-
+ 			-->
+ 			
 			<!-- resource插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -595,6 +622,7 @@
 		</profile>
 
 		<!-- 刷新开发环境数据库 -->
+		<!-- mvn antrun:run -Prefresh-db  -->
 		<profile>
 			<id>refresh-db</id>
 			<build>
